New changes for form

--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -8,7 +8,7 @@
 	
 	<body>
 		<h1 th:text="${titu}"></h1>
-	
+		<p>Probando cambios</p>
 		<ul>
 			<li th:text="${usuario.name}"></li>
 			<li th:text="${usuario.id}"></li>			
